Added modal style import

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,4 @@ code {
 
 @import "../src/styles/variables.scss";
 @import "../src/scenes/Dashboard/components/InputDeviceBox.scss";
+@import "../src/scenes/components/Modal.scss";
