--- a/src/scenes/Dashboard/components/InputDeviceBox.scss
+++ b/src/scenes/Dashboard/components/InputDeviceBox.scss
@@ -4,8 +4,9 @@
   }
   &__live-input-box {
     height: 40%;
-    width: 40%;
+    width: 60%;
     background: $dark;
+    margin-bottom: 5%;
 
     &__text {
       color: white;
