--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,38 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; //1rem = 10px, 10px/16px = 62.5%
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Cairo', sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #888;
+}
+
+.scene-container {
+  margin-left: 15rem;
+  height: 100%;
 }
 
 
 @import "../src/styles/variables.scss";
 @import "../src/scenes/Dashboard/components/InputDeviceBox.scss";
+@import "../src/scenes/components/NavBar.scss";
 @import "../src/scenes/components/Modal.scss";
+@import "../src/scenes/Dashboard/Dashboard.scss";
+@import "../src/scenes/Dashboard/components/Series.scss";
+@import "../src/scenes/Dashboard/SeriesPage/SeriesPage.scss";
+@import "../src/scenes/Auth/Login/Login.scss";
