--- a/src/scenes/components/Modal.scss
+++ b/src/scenes/components/Modal.scss
@@ -8,12 +8,70 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__title {
+    font-size: 2rem;
+  }
 
   &__content {
     background-color: white;
     color: black;
-    width: 40%;
-    height: 40%;
+    padding: 4rem;
+    margin-top: 3rem;
+
+    &--form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; 
+
+      & button {
+        border: none;
+        outline: none;
+        background-color: $button-blue;
+        padding: 0.6rem;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        justify-self: flex-start;
+        
+        &:hover {
+          transform: scale(1.05);
+          transition: 0.2s;
+    
+        }        
+      }
+    }
+
+    &--input {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 2rem;
+      width: 100%;
+      font-size: 1.2rem;
+
+      & label {
+        margin-right: 1rem;
+      }
+
+      & input {
+        // height: 2rem;
+        padding: 1rem;
+      }
+    }
+
+    &__top {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 2rem;
+    }
   }
 }
 
