Added new scss variables

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,15 @@
 $dark: #000000;
+
+$dark-blue: #487CAB;
+$light-blue: #4F98DA;
+$lighter-blue: rgb(132, 179, 221);
+$active-blue: rgb(93, 164, 226);
+$button-blue: rgb(66, 153, 230);
+$button-focused-blue: rgb(82, 161, 230);
+
+$light-list-blue: rgb(226, 238, 248);
+$hover-list-blue: rgb(200, 227, 250);
+$focused-list-blue: rgb(184, 222, 255);
+
+$card-idle-background: #F9F9F9;
+$card-focused-background: #F3F3F3;
