--- a/src/index.scss
+++ b/src/index.scss
@@ -36,3 +36,6 @@ body {
 @import "../src/scenes/Dashboard/components/Series.scss";
 @import "../src/scenes/Dashboard/SeriesPage/SeriesPage.scss";
 @import "../src/scenes/Auth/Login/Login.scss";
+@import "../src/scenes/Dashboard/SeriesPage/SeriesPage.scss";
+@import "../src/scenes/HistoryPage/HistoryPage.scss";
+@import "../src/scenes/HistoryPage/Autosuggest.scss";
