--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,5 +11,8 @@ $light-list-blue: rgb(226, 238, 248);
 $hover-list-blue: rgb(200, 227, 250);
 $focused-list-blue: rgb(184, 222, 255);
 
-$card-idle-background: #F9F9F9;
+$card-idle-background: rgb(234, 246, 253);
 $card-focused-background: #F3F3F3;
+$card-not-active-background: rgb(247, 247, 247);
+
+$history-details-background: rgba(213, 223, 232, 0.342);
