--- a/src/scenes/components/Modal.scss
+++ b/src/scenes/components/Modal.scss
@@ -28,6 +28,16 @@
       justify-content: center;
       align-items: center; 
 
+      label {
+        font-size: 2rem;
+        margin-bottom: 2rem;
+      }
+
+      input {
+        margin-bottom: 2rem;
+        padding: 0.5rem;
+      }
+
       & button {
         border: none;
         outline: none;
@@ -52,12 +62,13 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 2rem;
+      margin-bottom: 0.5rem;
       width: 100%;
       font-size: 1.2rem;
 
       & label {
         margin-right: 1rem;
+        font-size: 1.4rem;
       }
 
       & input {
@@ -71,6 +82,7 @@
       flex-direction: row;
       justify-content: space-between;
       margin-bottom: 2rem;
+      // margin-bottom: 2rem;
     }
   }
 }
